<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:background="@drawable/profile_background">


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        tools:text="User name" />

    <Button
        android:id="@+id/create_match_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_match_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/profile_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_match_button"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/all_profile_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/all_profile_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_button"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_profile_button"
        app:layout_constraintVertical_bias="0.089"
        tools:text="Logout" />


</androidx.constraintlayout.widget.ConstraintLayout>